@@ -5,6 +5,7 @@
  * MAC validation is yet to be added [19-08-2013]
  * Make pgen_store_dec to pgen_store_num to support hex also. Also validate the
    number before converting. [19-08-2013]
+ * Add IA_NA and IA_TA option for DHCPv6 message
 
 Bugs:
  * ICMPv6 checksum manual entry should be converted to network byte stream
